--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://chyeh.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: chyeh's Octopress Blog
+subtitle: I'm new to it =P.
+author: chyeh
 simple_search: http://google.com/search
 description:
 
